<resources>
    <string name="app_name">Ferret</string>
    <string name="app_version">v1.7</string>
    <string name="app_description">Uncover weaknesses in your WiFi</string>
    <string name="progress0">Getting Started...</string>
    <string name="progress1">Ferreting around for devices</string>
    <string name="progress2">Ferreting around for weaknesses</string>
    <string name="progress3a">No vulnerable devices detected</string>
    <string name="progress3b">vulnerable devices detected</string>
    <string name="message1a"> Looks like some of your devices have weak security. Attackers can target these devices to elicit your private information.</string>
    <string name="message1b">Congratulations. All your devices are secure. However, attackers keep on coming up with new ways to target your devices and elicit your private information.</string>
    <string name="message1c">Would you consider paying to make your devices more secure and help protect your privacy?</string>
    <string name="message1d">(We can send one of our technicians your way to do the necessary fixes)</string>
    <string name="message2">Which of these potential payment plans would you be the most comfortable with:</string>
    <string name="message2a">One time security patching: 3000Rs </string>
    <string name="message2b">Continual security surveillance subscription: 2000Rs/Month</string>
    <string name="message2c">Neither (Suggest a payment plan)</string>
    <string name="message3">Suggest a payment plan:              </string>
    <string name="message4">Please keep the application running in the background for a while. It helps us make the application even better for your future use. \nThis might take 1 to 5 hours. \nAfter this is done, we will share a secret key that you will need for the next part of the homework.</string>
    <string name="message5">Thank you for running the application! Please enter your name so that we can add it to our cool-people list:</string>
    <string name="message6">Before we start, where are you running the application? </string>
    <string name="message6a">A home</string>
    <string name="message6b">A cafe/restaurant</string>
    <string name="message6c">Other</string>
    <string name="message7">A <b>MAC Address</b> is a globally unique identifier for a device.</string>
    <string name="message7a">As a Computer Science student, you should be able to figure out a device\'s <b>MAC Address</b>.</string>
    <string name="message7b">Here are a few examples on how to do so:</string>
    <string name="message7c">Android Phone or Tablet</string>
    <string name="message7c2">https://kb.iu.edu/d/bbis</string>
    <string name="message7d">Mac OS X</string>
    <string name="message7d2">https://www.iclarified.com/30929/how-to-find-your-mac-address-in-mac-os-x</string>
    <string name="message7e">A TP-Link Router</string>
    <string name="message7e2">https://www.tp-link.com/us/faq-126.html</string>
    <string name="message7f">As a first step you can try to find a list of connected devices along with MAC Addresses
        on your router\'s homepage.</string>
    <string name="message7f2">For example, here is how you do it for a NETGEAR router:</string>
    <string name="message7f3">https://www.wikihow.com/See-Who-Is-Connected-to-Your-Wireless-Network</string>
    <string name="message7g">You can also individually check the devices in your home for their MAC Address.</string>
    <string name="message7h">Try the gateway homepage</string>
    <string name="message8">Figuring out a device\'s MAC Address</string>
    <string name="message9a">Grab a Pen and Paper!</string>
    <string name="message9b">You are going to need a pen and paper for the next step.\n\nPlease take some time to figure
        out the MAC Addresses of all the devices in your home.\n\nOn a piece of paper, write each device\'s type (Laptop, Cellphone,
        Router, etc), Model (One Plus X, MacBook Pro 3, iPad Air 2, etc), and the MAC Address (for example, 00:0a:95:9d:68:16).
        \n\nOnce you have a complete list, click PROCEED.</string>
    <string name="MACAddressHelp">How do I find a device\'s MAC Address?</string>
    <string name="labelTime">Time to label the devices!</string>
    <string name="recognize">Can you recognize what device in your home has this MAC Address?</string>
    <string name="recognized">If yes, tell us its: </string>
    <string-array name="deviceTypes">
        <item>Router/Gateway</item>
        <item>Laptop</item>
        <item>PC</item>
        <item>CellPhone</item>
        <item>Smart TV</item>
        <item>Smart Fridge</item>
        <item>Smart Bulb</item>
        <item>Tablet</item>
        <item>Security Camera</item>
        <item>Network Attached Storage</item>
        <item>Smart Speaker (Alexa, Google Home etc)</item>
        <item>Other</item>
    </string-array>
    <string name="Done">And we\'re done! Before you leave, tell us where you ran the application:</string>
    <string-array name="placeOptions">
        <item>A Home</item>
        <item>A Cafe/Restaurant</item>
        <item>Other</item>
    </string-array>
    <string name="secretKey"> Here is a secret key that you will need for the next part of the homework.
        Be sure to write it down somewhere safe for future use.</string>
    <string name="dataCollection"> What data will be collected? </string>
    <string name="dataCollectionText"> This application is going to collect the following data for the network you are currently on:</string>
    <string name="dataCollectionText1"> Information of the connected devices like vendor, device model, hashed MAC Address, and IP address. </string>
    <string name="dataCollectionText2"> A list of open ports and servers running along with the vulnerabilities they have (of the connected devices). </string>
    <string name="dataCollectionText3"> The public IP address of the network. </string>
    <string name="dataCollectionText4"> Device names (for example, Ahmad’s Phone). You can choose to opt out of this if you want to.</string>
    <string name="nameCollectionConsent"> I agree to my device names being collected </string>
    <string name="macAddressesNotFound"> Unfortunately, we were unable to collect the MAC addresses of any of your devices.</string>
    <string name="pleaserunagain"> Please run the scan again.</string>
    <string name="thankyou">Thank you for filling the survey!</string>
    <string name="thankyou2">Thank you for using the app!</string>
    <string name="runagain">Lets check for weaknesses in devices on your home WiFi!</string>
    <string name="runagain2">Do you want to restart?</string>
    <string name="initialsurvey">Time for a survey!</string>
    <string name="finalsurvey">Time for another survey!</string>
    <string name="surveyinstructions">\nTap the <b>Take Survey</b> button below on the right and answer the survey questions.\n\nTry to answer them as truthfully and accurately as possible.\n\nOnce you are finished with the survey, click the <b>Scan</b> button that appears. It will take you to the scan screen.\n\nIn case you wish to change your answers, you can open the survey again by tapping the Take Survey button and change your responses.\n\nThank you for your patience and good luck!</string>
    <string name="surveyinstructions2">\nPlease move to the next survey. \n\nTap the <b>Take Survey</b> button below on the right and answer the survey questions.\n\nTry to answer them as truthfully and accurately as possible.\n\n<b>Please note that some of the questions are similar to the previous survey.</b>\n\nThank you for your patience and good luck!</string>
    <string name="surveyinstructionheadings">Instructions</string>
    <string name="surveyinstructionsheading2">Thank you for using the app!</string>
    <string name="Ferret">Ferret</string>
    <string name="Title">Demographic Details</string>
    <string name="Title2">Tech Expertise</string>
    <string name="Title3">Smart Devices</string>
    <string name="Title4">Experience</string>
    <string name="Title5">User Response</string>
    <string name="Q1">Age Group</string>
    <string name="Q2">Gender</string>
    <string name="Q3">City</string>
    <string name="Q4">Society/Town</string>
    <string name="Q5">WiFi Network</string>
    <string name="Q6">Q1. Do you have (or are pursuing) a degree in Computer Science or a related field?</string>
    <string name="Q7">Q2. Have you worked in the technology industry?</string>
    <string name="Q8">Q2b. Have you worked in a security related field?</string>
    <string name="Q9">Q3. Have you taken courses (online or physical) related to computer science in the past two years?</string>
    <string name="Q10">Q3b. Have you taken any security related courses?</string>
    <string name="Q11">Q4. Are you proficient in any programming language?</string>
    <string name="Q12">Q1. Please list all the smart devices that you have at home (connected to WiFi).</string>
    <string name="Q13">Q2. What factor do you consider as your first priority while purchasing a smart home device? </string>
    <string name="Q14">Q1. Do you think any sort of data is being collected by your smart devices? </string>
    <string name="Q15">Q2. What sort of data do you think smart home devices collect? Please select all that apply.</string>
    <string name="Q16">Q3. Are you concerned about data being recorded by your smart home devices? </string>
    <string name="Q17">Q4. Who do you think can access data collected from your smart home devices? Please select all that apply </string>
    <string name="S18">Q5. Would you be concerned if data collected from each of your smart home devices can be accessed by the following entities: </string>
    <string name="Q18">a) Company that manufactures the device </string>
    <string name="Q19">b) Online Advertisers </string>
    <string name="Q20">c) Government’s Information Technology departments </string>
    <string name="Q21">d) Companies that provide Internet service  </string>
    <string name="Q22">e) A random person </string>
    <string name="Q23">Q6. How do you feel about (possibly) having security cameras inside homes? </string>
    <string name="Q24">Q7. Do you think data from smart devices is capable of predicting lifestyles and routines of users?</string>
    <string name="Q25">Q8. Do you think an unauthorized user can <b><i>obtain data</i></b> from your smart device?</string>
    <string name="S25">An unauthorized user is someone who should not be trusted to have access to a particular information or system.</string>
    <string name="Q26">Q9. Do you think an unauthorized user can <b><i>control</i></b> your smart devices (e.g. change settings)?</string>
    <string name="S26">An unauthorized user is someone who should not be trusted to have access to a particular information or system. </string>
    <string name="Q27">Q10. Which smart home device will you be (or are) concerned the most about (generally)? </string>
    <string name="Q28">Q11. Why would you be concerned with the smart home devices you chose in the previous question? Please select all that apply. </string>
    <string name="Q29">Q12. Have you taken any steps to keep your smart devices safe from unauthorized access? Please select all that apply. </string>
    <string name="Q30">Q13. If there was an app that can identify weaknesses (viruses, leaked passwords, outdated softwares etc) in your smart home devices, would you use it often?</string>
    <string name="Q31">Q14. Would you feel concerned if your smart home devices showed weaknesses (viruses, leaked passwords, outdated softwares etc)?  </string>
    <string name="Q32">Q1. Do you feel concerned with the results of the scan?</string>
    <string name="Q33">Q2. Would you feel comfortable if an unknown person (outside family and close friends) gets access to or views your scan results?  </string>
</resources>