<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity"
    android:padding="10dp">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toLeftOf="@id/name"
            android:src="@drawable/logo"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ferret"
            android:textSize="30dp"
            android:textColor="@color/Shakespeare"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/allTheContent"
        android:layout_above="@id/close"
        android:layout_below="@id/header">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/quest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message8"
                android:textStyle="bold"
                android:paddingTop="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="5dp"
                android:textColor="@color/Shakespeare"
                android:textSize="17dp"/>

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/quest"
                android:orientation="vertical"
                android:padding="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message7"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message7a"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message7h"
                    android:textStyle="bold"
                    android:paddingLeft="5dp"
                    android:paddingTop="15dp"
                    android:textSize="15dp"
                    android:textColor="@color/Shakespeare"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message7f"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message7f2"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message7f3"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:autoLink="web"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message7g"
                    android:paddingBottom="5dp"
                    android:paddingTop="15dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message7b"
                    android:padding="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/info1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/info"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message7c"
                    android:textStyle="bold"
                    android:paddingTop="15dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="5dp"
                    android:textSize="15dp"
                    android:textColor="@color/Shakespeare"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:paddingRight="15dp"
                    android:text="@string/message7c2"
                    android:autoLink="web"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/info2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/info1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message7d"
                    android:textStyle="bold"
                    android:paddingTop="15dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="5dp"
                    android:textSize="15dp"
                    android:textColor="@color/Shakespeare"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:paddingRight="15dp"
                    android:text="@string/message7d2"
                    android:autoLink="web"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/info3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/info2"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message7e"
                    android:textStyle="bold"
                    android:paddingTop="15dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="5dp"
                    android:textSize="15dp"
                    android:textColor="@color/Shakespeare"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:paddingRight="15dp"
                    android:text="@string/message7e2"
                    android:autoLink="web"/>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/close"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CLOSE"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>