<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".DataCollectionActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toLeftOf="@id/name"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Ferret"
            android:textColor="@color/Shakespeare"
            android:textSize="30dp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/allTheContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/proceed"
        android:layout_below="@id/header">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/quest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="20dp"
                android:paddingRight="15dp"
                android:paddingBottom="5dp"
                android:text="@string/dataCollection"
                android:textColor="@color/Shakespeare"
                android:textSize="17dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/quest"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/dataCollectionText"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/dataCollectionText1"
                    android:textColor="@color/Shakespeare" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/dataCollectionText2"
                    android:textColor="@color/Shakespeare" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/dataCollectionText3"
                    android:textColor="@color/Shakespeare" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/dataCollectionText4"
                    android:textColor="@color/Shakespeare" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/nameCollectionConsent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/info"
                android:layout_margin="15dp"
                android:enabled="true"
                android:padding="5dp"
                android:text="@string/nameCollectionConsent" />

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/proceed"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="I CONSENT"
        android:textStyle="bold" />

</RelativeLayout>