<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionsActivity"
    android:padding="10dp">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toLeftOf="@id/name"
            android:src="@drawable/logo"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ferret"
            android:textSize="30dp"
            android:textColor="@color/Shakespeare"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/quest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:text="@string/message9a"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:textColor="@color/Shakespeare"
        android:textSize="17dp"/>

    <TextView
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quest"
        android:text="@string/message9b"
        android:padding="20dp"/>

    <LinearLayout
        android:id="@+id/helpMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/instructions"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/question"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MACAddressHelp"
            android:textColor="@color/Shakespeare"
            android:textStyle="bold"
            android:id="@+id/helpTV"
            />
    </LinearLayout>



    <Button
        android:id="@+id/proceed"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PROCEED"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>