<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".InstructionsActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toLeftOf="@id/name"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Ferret"
            android:textColor="@color/Shakespeare"
            android:textSize="30dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/finalsurvey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:text="@string/finalsurvey"
        android:textColor="@color/Shakespeare"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/surveyinstructionsheading2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/finalsurvey"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"

        android:text="@string/surveyinstructionsheading2"
        android:textColor="@color/colorPrimary"

        android:textSize="17dp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/surveyinstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/surveyinstructionsheading2"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:text="@string/surveyinstructions2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/proceed"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="16dp"
            android:text="TAKE SURVEY"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/opensurvey"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="16dp"
            android:text="FINISH"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>